add "delete vote" api
