# backend/controllers/vote.go
@@ -4,6 +4,7 @@ import (
 	"encoding/json"
 	"log"
 	"net/http"
+	"strconv"
 	"time"
 
 	"github.com/Pitasi/pick-a-movie/lib"
@@ -77,8 +78,39 @@ func createVote(dm *lib.DBManager) http.HandlerFunc {
 	}
 }
 
+// @summary Delete a vote
+// @description delete vote
+// @accept  json
+// @param	request body models.CreateVoteRequest true "Request Body"
+// @param id path string true "Vote ID"
+// @tags Vote
+// @success 200
+// @failure 400 {string} string "Invalid payload"
+// @failure 403 {string} string "Proposal session closed"
+// @failure 404 {string} string "Proposal not found"
+// @failure 500 {string} string "Database operation failed"
+// @router /votes/{id} [delete]
+func deleteVote(dm *lib.DBManager) http.HandlerFunc {
+	return func(rw http.ResponseWriter, r *http.Request) {
+		id, err := strconv.ParseInt(chi.URLParam(r, "id"), 10, 64)
+		if err != nil {
+			rw.WriteHeader(400)
+			log.Printf("[E]: %s", err)
+			return
+		}
+
+		res, err := dm.DB.Model(&models.Vote{}).Where("Id = ?0", id).Delete()
+		if err != nil {
+			rw.WriteHeader(404)
+			log.Printf("[E]: %s - %t", err.Error(), res)
+			return
+		}
+	}
+}
+
 func NewVoteController(dm *lib.DBManager) http.Handler {
 	r := chi.NewRouter()
 	r.Post("/", createVote(dm))
+	r.Delete("/{id}", deleteVote(dm))
 	return r
 }
