# backend/docs/swagger.yaml
@@ -298,6 +298,45 @@ paths:
       summary: Create a new vote
       tags:
       - Vote
+  /votes/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: delete vote
+      parameters:
+      - description: Request Body
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/CreateVoteRequest'
+      - description: Vote ID
+        in: path
+        name: id
+        required: true
+        type: string
+      responses:
+        "204":
+          description: ""
+        "400":
+          description: Invalid payload
+          schema:
+            type: string
+        "403":
+          description: Proposal session closed
+          schema:
+            type: string
+        "404":
+          description: Proposal not found
+          schema:
+            type: string
+        "500":
+          description: Database operation failed
+          schema:
+            type: string
+      summary: Delete a vote
+      tags:
+      - Vote
 swagger: "2.0"
 tags:
 - name: Proposal
